removed remember me from registration and fixed spacing

--- a/src/main/resources/static/css/registration.css
+++ b/src/main/resources/static/css/registration.css
@@ -16,8 +16,8 @@ img{
 }
 
 form{
-   padding-top: 50px;
-    padding-bottom: 30px;
+    padding-top: .6rem;
+    padding-bottom: 1rem;
 }
 #login-button{
     cursor: pointer;
